# nnue-pytorch

./: CMakeLists.txt  features.py  halfka.py  halfkp.py  halfkp_kk.py  halfkp_ksdg.py  halfkpe4.py  halfkpe4_ksdg.py  halfkpe9.py  loss_graph.py  model.py  nnue_bin_dataset.py  serialize.py  sgd_with_gradient_centralization.py  tensorboard.bat  train.py  train.txt  training_data_loader.cpp
YaneuraOu/source/: config.h  misc.cpp  position.h
YaneuraOu/source/eval/nnue/: nnue_architecture.h
YaneuraOu/source/eval/nnue/architectures/: halfkp-kingsafety_distinguishgolds_512x2-8-96.h  halfkp-kk_512x2-8-96.h  halfkpe4-kingsafety_distinguishgolds_256x2-32-32.h  halfkpe4-kingsafety_distinguishgolds_512x2-8-96.h  halfkpe4_512x2-8-96.h
YaneuraOu/source/extra/: sfen_packer.cpp
lib/: nnue_training_data_formats.h  nnue_training_data_stream.h
lib/YaneuraOu/: misc.cpp  position.h
lib/YaneuraOu/eval/nnue/trainer/: trainer_feature_transformer.h
lib/YaneuraOu/extra/: sfen_packer.cpp
nnue-pytorch/: nnue-pytorch.sln
nnue-pytorch/nnue-pytorch/: nnue-pytorch.vcxproj  nnue-pytorch.vcxproj.filters
